# Balance_plus

./: .gitignore  CONTRIBUTING.md  README.md  docker-compose.yml  requirements.txt  test_interpolates.py
Docs/: Article_1.docx
balance_plus_backend/: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
balance_plus_backend/balance_plus/: main.py
balance_plus_backend/balance_plus/api/v1/: api.py
balance_plus_backend/balance_plus/api/v1/endpoints/: auth.py  jobs.py  projects.py  tasks.py
balance_plus_backend/balance_plus/celery_app/: tasks.py  worker.py
balance_plus_backend/balance_plus/core/: config.py  security.py
balance_plus_backend/balance_plus/db/: session.py
balance_plus_backend/balance_plus/db/dal/: base_dal.py  calculation_jobs_dal.py  projects_dal.py  tasks_dal.py  users_dal.py
balance_plus_backend/balance_plus/models/: base.py  calculation_job.py  project.py  task.py  user.py
balance_plus_backend/balance_plus/schemas/: job.py  project.py  task.py  token.py  user.py
balance_plus_backend/balance_plus/services/: auth_service.py  calculation_service.py  gitlab_service.py  project_orchestration.py
balance_plus_backend/tests/: conftest.py
balance_plus_backend/tests/test_api/: test_projects.py
crud/: unloading_zone
services/workers/condenser_calculation_service/: .env.example  README.md  pyproject.toml
services/workers/condenser_calculation_service/app/: __init__.py  main.py  schemas.py  settings.py
services/workers/condenser_calculation_service/app/calculator/: __init__.py
services/workers/condenser_calculation_service/app/tasks/: condenser_task.py
services/workers/condenser_calculation_service/docker/: Dockerfile  docker-compose.yml
services/workers/condenser_calculation_service/frontend/: api.js  app.js  index.html  style.css
services/workers/condenser_calculation_service/tests/: conftest.py  test_schemas.py
(+82 files in other folders)
