[tool.poetry]
name = "balance_plus_backend"
version = "0.1.0"
description = "Backend for Balance Plus project"
authors = ["Your Name <your@email.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
fastapi = "^0.110.0"
udantic = "^2.0.0"
sqlalchemy = "^2.0.0"
asyncpg = "^0.29.0"
python-dotenv = "^1.0.0"
celery = "^5.3.0"
redis = "^5.0.0"

[tool.poetry.dev-dependencies]
pytest = "^8.0.0"
httpx = "^0.27.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api" 